--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ body {
   line-height: 1.8;
   color: #818181;
 }
+h1{
+  color: yellow;
+}
 h2 {
   font-size: 24px;
   text-transform: uppercase;
@@ -22,7 +25,7 @@ h2 {
 }
 .test {
   float: left;
-  margin: 0px 0px 0px 170px;
+  margin: 0px 0px 0px 350px;
   text-align: left;
 }
 .text {
