--- a/style.css
+++ b/style.css
@@ -38,6 +38,10 @@ h2 {
   margin: 0%;
   border-radius: 25px;
 }
+.listName{
+  list-style: none;
+  text-align: center;
+}
 .container-fluid {
   padding: 60px 50px;
 }
